# QtCreatorProjectTemplates

./: README.md  installTemplates.sh
MdcgCpp/: CMakeLists.txt  README.md  wizard.json
MdcgCpp/src/: main.cpp
MdcgCppDeps/: CMakeLists.txt  LICENCE-proprietary  README.md  postGenerate.sh  wizard.json
MdcgCppDeps/libs/: CMakeLists.txt
MdcgSimpleCpp/: CMakeLists.txt  README.md  wizard.json
MdcgSimpleCpp/src/: main.cpp
